Further modified index page for experiments with new users account. Copied updated lighttpd config file into git repo.

--- a/lighttpd.conf
+++ b/lighttpd.conf
@@ -38,10 +38,10 @@ server.modules              = (
 
 ## a static document-root, for virtual-hosting take look at the
 ## server.virtual-* options
-server.document-root        = "/home/root/IPRO-343-Comm/git/IPRO-343-Comm/www/"
+server.document-root        = "/home/IPRO-343-Comm/IPRO-343-Comm/www/"
 
 ## where to send error-messages to
-server.errorlog             = "/www/logs/lighttpd.error.log"
+server.errorlog             = "/home/IPRO-343-Comm/IPRO-343-Comm/www/logs/lighttpd.error.log"
 
 # files to check for if .../ is requested
 index-file.names            = ( "index.php", "index.html",
